<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Criar Tarefa"
        app:navigationIcon="@drawable/ic_baseline_navigate_before_24"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipTitle"
app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginTop="16dp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:hint="@string/Title"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Toolbar">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toStartOf="@id/tipHora"
        android:layout_marginTop="16dp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:hint="@string/Date"
        app:layout_constraintTop_toBottomOf="@id/tipTitle">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipHora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="@id/tipData"
        app:layout_constraintStart_toEndOf="@id/tipData"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:layout_marginStart="16dp"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:hint="@string/Hour"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style=""
        android:text="@string/Cancel"
        android:id="@+id/btCancel"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btNewTask"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        />

<com.google.android.material.button.MaterialButton
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    style=""
    android:text="@string/new_task"
    android:id="@+id/btNewTask"
    android:textAllCaps="false"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@id/guide_end"
    app:layout_constraintStart_toStartOf="@id/guide_start"
    />


</androidx.constraintlayout.widget.ConstraintLayout>